@@ -829,7 +829,7 @@ schema = Schema((
         name='listType',
         default='normal',
         widget=SelectionWidget(
-            visible=False,
+            visible=True,
             condition="python: here.adapted().mayChangeListType()",
             label='Listtype',
             label_msgid='PloneMeeting_label_listType',
@@ -1388,7 +1388,6 @@ schema = Schema((
         name='takenOverBy',
         widget=StringField._properties['widget'](
             condition="python: here.attributeIsUsed('takenOverBy')",
-            visible="False",
             label='Takenoverby',
             label_msgid='PloneMeeting_label_takenOverBy',
             i18n_domain='PloneMeeting',
