@@ -49,6 +49,8 @@ Older versions than 3.0 can be found at http://svn.communesplone.org/svn/commune
   WF_MEETING_STATE_NAME_MAPPINGS_1/WF_MEETING_STATE_NAME_MAPPINGS_2 and moved WF_TRANSITION_NAME_MAPPINGS to
   WF_ITEM_TRANSITION_NAME_MAPPINGS_1/WF_ITEM_TRANSITION_NAME_MAPPINGS_2 and WF_MEETING_TRANSITION_NAME_MAPPINGS_1/
   WF_MEETING_TRANSITION_NAME_MAPPINGS_2 so we may handle differents workflows
+- Added possibility to display every fields of MeetingItem on the dashboard more infos view, not just the RichText
+  fields like it was the case before
 
 4.0 (2017-08-04)
 ----------------
